# lustre

./: Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES  gameengine.desktop  lustre.desktop
assets/: cube.glb
src/: file_explorer.rs  gui.rs  launcher.rs  lib.rs  lua_editor.rs  lustrerender.rs  main.rs  menu_bar.rs  mod.rs  modules.rs  render.rs  shaders.rs  state.rs  utils.rs  window.rs
src/debug/: debug.rs
src/engine/: gui.rs  mod.rs  render.rs
src/engine/core/: controller.rs  mod.rs  objects.rs  voxel.rs
src/engine/ui/: file_explorer.rs  lua_editor.rs  menu_bar.rs  mod.rs  utils.rs
src/modules/: engine.rs  mod.rs
src/modules/engine/: configuration.rs  gui.rs  mod.rs  physics.rs  render.rs
src/modules/engine/configuration/: animation.rs  config.rs  env.rs  general.rs  logger.rs  mod.rs  theme.rs  validate.rs
src/modules/engine/gui/: components.rs  editor.rs  explorer.rs  menu_bar.rs  mod.rs  new_project.rs  save_file.rs  saveas_file.rs  toolbar.rs  utils.rs  window.rs
src/modules/engine/gui/components/: grid.rs  mod.rs  sidebar.rs  tabs.rs
src/modules/engine/gui/editor/: lua_editor.rs  mod.rs
src/modules/engine/gui/explorer/: file_explorer.rs  fileexplorer.rs  mod.rs
src/modules/engine/physics/: components.rs  physics_core.rs
src/modules/engine/physics/components/: rigid_body_handler.rs
src/modules/engine/render/: core.rs  eventhandler.rs  mod.rs  render_core.rs  template.rs  vulkan.rs
src/modules/engine/render/vulkan/: event_handler.rs  eventhandler.rs  pipelines.rs  swapchain_handler.rs  vulkan_core.rs
src/modules/engine/render/vulkan/pipelines/: pipelines_core.rs
src/modules/render/: core.rs  mod.rs
src/modules/render/Vulkan/wayland/: core.rs
src/modules/render/vulkan/: event_handler.rs  mod.rs  swapchain_handler.rs  vulkan_surface.rs
src/modules/render/vulkan/wayland/: core.rs  event_handler.rs  mod.rs  swapchain_handler.rs  vulkan_surface.rs  wayland_surface.rs
src/schemas/: org.cvusmo.gameengine.gschema.xml
src/shaders/: 3dshader.comp  border.comp  fragment.comp  fragment.frag  fragment2.frag  image.comp  mandelbrot.comp  object_fs.frag  object_vs.vert  vertex.comp  vertex.vert
