[package]
name = "lustre"
version = "0.1.0"
edition = "2021"

[lib]
name = "lustre"
path = "src/lib.rs" 

[[bin]]
name = "lustre-bin"
path = "src/main.rs"

[dependencies]
bytemuck = "1.21.0"
chrono = "0.4.39"
clap = "4.5.23"
config = "0.15.4"
dirs = "5.0.1"
fern = "0.7.1"
gtk4 = "0.9.5"
gdk4 = "0.9.5"
gdk4-x11 = "0.9.5"
gdk4-wayland = "0.9.5"
glib = "0.20.7"
log = "0.4.22"
mlua = { version = "0.10.2", features = ["lua54"] }
once_cell = "1.20.2"
raw-window-handle = "0.6.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
toml = "0.8.19"
vulkano = "0.34.1"
winit = { version = "0.30.7", features = ["x11", "wayland"] }
