[package]
name = "lustre"
version = "0.1.0"
edition = "2021"

[lib]
name = "lustre"
path = "src/lib.rs"

[[bin]]
name = "lustre"
path = "src/main.rs"

[dependencies]
bytemuck = "1.21.0"
chrono = "0.4.39"
clap = "4.5.31"
config = "0.15.8"
dirs = "6.0.0"
fern = "0.7.1"
gtk4 = "0.9.6"
gdk4 = "0.9.6"
glib = "0.20.9"
image = "0.25.5"
log = "0.4.25"
mlua = { version = "0.10.3", features = ["lua54"] }
nalgebra = "0.33.2"
once_cell = "1.20.3"
rapier3d = "0.23.0"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
shaderc-sys = "0.8.3"
specs = "0.20.0"
toml = "0.8.20"
vulkano = "0.35.1"
vulkano-macros = "0.35.0"
vulkano-win = "0.34.0"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
winit = { version = "0.30.9", optional = true, features = ["x11", "wayland", "rwh_06", "rwh_05"] }

[features]
default = ["winit"]

wayland = ["winit/wayland"]
x11 = ["winit/x11"]

# Ensure that wayland and x11 features are mutually exclusive
wayland-conflict = ["x11"]
x11-conflict = ["wayland"]
